--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~9.1.4",
     "@angular/platform-browser-dynamic": "~9.1.4",
     "@angular/router": "~9.1.4",
+    "@ngrx/store": "^9.1.2",
     "firebase": "^7.14.3",
     "rxjs": "~6.5.4",
     "rxjs-compat": "^6.5.5",
