--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "ng-fit",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
+  "version": "1.0.0",
   "private": true,
+  "description": "",
+  "homepage": "https://zjayers.github.io/ng-fit/",
+  "bugs": {
+    "url": "https://github.com/zjayers/ng-fit/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zjayers/ng-fit.git"
+  },
+  "license": "MIT",
+  "author": "Zach Ayers",
   "dependencies": {
     "@angular/animations": "~9.1.4",
     "@angular/cdk": "^9.2.3",
@@ -31,14 +34,20 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "~0.900",
     "@angular-devkit/build-angular": "~0.901.4",
     "@angular/cli": "~9.1.4",
     "@angular/compiler-cli": "~9.1.4",
     "@angular/language-service": "~9.1.4",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^0.6.2",
     "codelyzer": "^5.1.2",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~5.0.0",
@@ -49,11 +58,10 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3",
-    "@angular-devkit/architect": "~0.900",
-    "firebase-tools": "^8.0.0",
-    "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1"
+    "typescript": "~3.8.3"
+  },
+  "engines": {
+    "node": ">=12.18.3",
+    "npm": ">=6.14.7"
   }
 }
